Fix game end overflow and card text height

--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -41,12 +41,17 @@
   position: absolute;
   bottom: 0;
   font-size: 180%;
-  padding: 1rem;
+  height: 5rem;
   font-weight: 500;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+  padding-left: 3px;
+  padding-right: 3px;
 }
 
 @media screen and (max-width: 1200px) {
@@ -61,7 +66,6 @@
 
   .card p {
     font-size: 160%;
-    padding: 0.5rem;
     font-weight: 500;
   }
 }
@@ -102,7 +106,7 @@
 
   .card p {
     font-size: 100%;
-    padding: 0.3rem;
+    height: 3.5rem;
     font-weight: 400;
   }
 }
