--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,7 @@ body {
   font-variant-numeric: tabular-nums;
   overflow: overlay;
 }
+
+.no-scroll {
+  overflow: hidden;
+}
